# libnss-nonlocal

./: Makefile  Makefile.am  README  configure.ac  libnss_nonlocal.map  nonlocal-group.c  nonlocal-passwd.c  nonlocal-shadow.c  nonlocal.h  nsswitch-internal.h  walk_nss.h
debian/: changelog  control  control.in  copyright  lib32nss-nonlocal.install  lib64nss-nonlocal.install  libnss-nonlocal-common.postrm  libnss-nonlocal-common.preinst  libnss-nonlocal.postrm  libnss-nonlocal.preinst  rules
